--- a/README.adoc
+++ b/README.adoc
@@ -54,6 +54,7 @@ a|
 * link:{package}/NonDecreasingArray.java[non-decreasing-array]
 * link:{package}/ArrayPartitionI.java[array-partition-i]
 * link:{package}/ReshapeTheMatrix.java[reshape-the-matrix]
+* link:{package}/DegreeOfAnArray.java[degree-of-an-array]
 a|
 * link:{package}/ContainerWithMostWater.java[container-with-most-water]
 * link:{package}/ThreeSum.java[3sum]
