--- a/README.adoc
+++ b/README.adoc
@@ -89,6 +89,7 @@ a|
 * link:{package}/MaximumPointsYouCanObtainFromCards.java[maximum-points-you-can-obtain-from-cards]
 * link:{package}/LongestTurbulentSubarray.java[longest-turbulent-subarray]
 * link:{package}/LongestContinuousSubarrayWithAbsoluteDiffLessThanOrEqualToLimit.java[longest-continuous-subarray-with-absolute-diff-less-than-or-equal-to-limit]
+* link:{package}/GrumpyBookstoreOwner.java[grumpy-bookstore-owner]
 a|
 * link:{package}/MedianOfTwoSortedArrays.java[median-of-two-sorted-arrays]
 * link:{package}/BestTimeToBuyAndSellStockIII.java[best-time-to-buy-and-sell-stock-iii]
@@ -469,6 +470,7 @@ a|
 * link:{package}/PermutationInString.java[permutation-in-string]
 * link:{package}/MaxConsecutiveOnesIII.java[max-consecutive-ones-iii]
 * link:{package}/LongestContinuousSubarrayWithAbsoluteDiffLessThanOrEqualToLimit.java[longest-continuous-subarray-with-absolute-diff-less-than-or-equal-to-limit]
+* link:{package}/GrumpyBookstoreOwner.java[grumpy-bookstore-owner]
 a|
 * link:{package}/SlidingWindowMaximum.java[sliding-window-maximum]
 * link:{package}/LongestRepeatingCharacterReplacement.java[longest-repeating-character-replacement]
