:sparkles: transpose-matrix

--- a/README.adoc
+++ b/README.adoc
@@ -57,6 +57,7 @@ a|
 * link:{package}/DegreeOfAnArray.java[degree-of-an-array]
 * link:{package}/ToeplitzMatrix.java[toeplitz-matrix]
 * link:{package}/FlippingAnImage.java[flipping-an-image]
+* link:{package}/TransposeMatrix.java[transpose-matrix]
 a|
 * link:{package}/ContainerWithMostWater.java[container-with-most-water]
 * link:{package}/ThreeSum.java[3sum]
