:sparkles: basic-calculator-ii

--- a/README.adoc
+++ b/README.adoc
@@ -133,6 +133,7 @@ a|
 * link:{package}/RemoveDuplicateLetters.java[remove-duplicate-letters]
 * link:{package}/LongestPalindromicSubstring.java[longest-palindromic-substring]
 * link:{package}/SmallestStringWithSwaps.java[smallest-string-with-swaps]
+* link:{package}/BasicCalculatorII.java[basic-calculator-ii]
 a|
 * link:{package}/RegularExpressionMatching.java[regular-expression-matching]
 
