:sparkles: design-hashmap

--- a/README.adoc
+++ b/README.adoc
@@ -245,6 +245,7 @@ a|
 * link:{package}/IntersectionOfTwoArraysII.java[intersection-of-two-arrays-ii]
 * link:{package}/FirstUniqueCharacterInAString.java[first-unique-character-in-a-string]
 * link:{package}/MyHashSet.java[design-hashset]
+* link:{package}/MyHashMap.java[design-hashmap]
 a|
 * link:{package}/FourSum.java[4sum]
 * link:{package}/BinaryTreeInorderTraversal.java[binary-tree-inorder-traversal]
