--- a/README.adoc
+++ b/README.adoc
@@ -229,6 +229,7 @@ a|
 * link:{package}/NextGreaterElementII.java[next-greater-element-ii]
 * link:{package}/VerifyPreorderSerializationOfABinaryTree.java[verify-preorder-serialization-of-a-binary-tree]
 * link:{package}/NestedIterator.java[flatten-nested-list-iterator]
+* link:{package}/OneThreeTwoPattern.java[132-pattern]
 a|
 * link:{package}/BasicCalculator.java[basic-calculator]
 
