--- a/README.adoc
+++ b/README.adoc
@@ -375,6 +375,7 @@ a|
 * link:{package}/LongestTurbulentSubarray.java[longest-turbulent-subarray]
 * link:{package}/NumMatrix.java[range-sum-query-2d-immutable]
 * link:{package}/CountingBits.java[counting-bits]
+* link:{package}/LongestCommonSubsequence.java[longest-common-subsequence]
 a|
 * link:{package}/RegularExpressionMatching.java[regular-expression-matching]
 * link:{package}/BestTimeToBuyAndSellStockIII.java[best-time-to-buy-and-sell-stock-iii]
