--- a/README.adoc
+++ b/README.adoc
@@ -194,6 +194,7 @@ a|
 * link:{package}/SuperUglyNumber.java[super-ugly-number]
 * link:{package}/BulbSwitcher.java[bulb-switcher]
 * link:{package}/ClumsyFactorial.java[clumsy-factorial]
+* link:{package}/RabbitsInForest.java[rabbits-in-forest]
 a|
 * link:{package}/BasicCalculator.java[basic-calculator]
 
@@ -260,6 +261,7 @@ a|
 * link:{package}/ValidSudoku.java[valid-sudoku]
 * link:{package}/GroupAnagrams.java[group-anagrams]
 * link:{package}/HIndex.java[h-index]
+* link:{package}/RabbitsInForest.java[rabbits-in-forest]
 a|
 * link:{package}/NumberOfValidWordsForEachPuzzle.java[number-of-valid-words-for-each-puzzle]
 
