:sparkles: minimum-distance-between-bst-nodes

--- a/README.adoc
+++ b/README.adoc
@@ -280,6 +280,7 @@ a|
 * link:{package}/LowestCommonAncestorOfABinarySearchTree.java[lowest-common-ancestor-of-a-binary-search-tree]
 * link:{package}/BinaryTreePaths.java[binary-tree-paths]
 * link:{package}/SumOfLeftLeaves.java[sum-of-left-leaves]
+* link:{package}/MinimumDistanceBetweenBSTNodes.java[minimum-distance-between-bst-nodes]
 a|
 * link:{package}/BinaryTreeInorderTraversal.java[binary-tree-inorder-traversal]
 * link:{package}/BSTIterator.java[binary-search-tree-iterator]
