:sparkles: single-number-ii

--- a/README.adoc
+++ b/README.adoc
@@ -215,6 +215,7 @@ a|
 * link:{package}/Subsets.java[subsets]
 * link:{package}/NumberOf1Bits.java[number-of-1-bits]
 * link:{package}/CountingBits.java[counting-bits]
+* link:{package}/SingleNumberII.java[single-number-ii]
 a|
 * link:{package}/NumberOfValidWordsForEachPuzzle.java[number-of-valid-words-for-each-puzzle]
 
