--- a/README.adoc
+++ b/README.adoc
@@ -393,6 +393,7 @@ a|
 * link:{package}/HouseRobberII.java[house-robber-ii]
 * link:{package}/LargestDivisibleSubset.java[largest-divisible-subset]
 * link:{package}/CombinationSumIV.java[combination-sum-iv]
+* link:{package}/DeleteAndEarn.java[delete-and-earn]
 a|
 * link:{package}/RegularExpressionMatching.java[regular-expression-matching]
 * link:{package}/BestTimeToBuyAndSellStockIII.java[best-time-to-buy-and-sell-stock-iii]
