:sparkles: xor-queries-of-a-subarray

--- a/README.adoc
+++ b/README.adoc
@@ -221,6 +221,7 @@ a|
 * link:{package}/CountingBits.java[counting-bits]
 * link:{package}/SingleNumberII.java[single-number-ii]
 * link:{package}/DecodeXoredPermutation.java[decode-xored-permutation]
+* link:{package}/XorQueriesOfASubarray.java[xor-queries-of-a-subarray]
 a|
 * link:{package}/NumberOfValidWordsForEachPuzzle.java[number-of-valid-words-for-each-puzzle]
 
